styles.css
* {
    box-sizing: border-box;
}
body{
    margin:0;   
} 
.main{
    background:#282828;
    color:whitesmoke;
    display: block;
    text-align: center;
    font-size:1.6vw;
    font-family: Arial, Helvetica, sans-serif;
    margin:0;
    
}
nav{
    display: flex;
    justify-content: center;
}
nav a{
    background-color: rgb(231, 54, 54);
    color:whitesmoke;
    margin: 10px 10px;
    padding: 0 10px;
}
nav a:hover{
    background:rgb(49, 49, 251);
}
h1{
    font-size:18vw;
    margin:0;
    text-shadow: 5px 5px 10px black;
}
#cubes{
    display:flex;
    width: 100%;
    height: 10%;
    /* background-image: url("https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaGRybzczaGV3aWw5bHZ3cXRvamtlb2twNW93cDFqcG9mNWhwbzFkYSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/ujygH8l79xR9m/giphy.gif"); */
    background-size: cover;
}
.album{
display:flex;
width:40vw;
height:40vw;
margin: 0 auto;
}

p{
    text-align: center;
    width:50vw;
    margin:0 10px;
}
.banner{
    display:flex;
    margin:8px;

}
.pics img{
width: 100%;
padding:0 5px; 
}

.link{
    background:rgb(231, 54, 54);
    display:flex;
    justify-content: space-around;
    margin: 0 0 15px 0;
    padding:10px;
    border: dashed;
}
.link a{
    color:whitesmoke;
    padding: 20px;
    border-radius: 10%; 
    font-weight: bolder;
}
.atn{
    color:rgb(231, 54, 54);
    border-bottom: solid 5px;
}
.link a:hover{
    background:rgb(0, 179, 21);
}
.albumstack{
    display:flex;
    margin: 5vw 0 0 0;
}
#count-el{
    display:flex;
    margin: 20px auto;
    width:10%;
    text-align:center;
    color: whitesmoke;
    font-size: 20px;
    padding: 5px 10px;
    border:solid 2px red;   
}
#count-el h2{
    margin:0 auto;
}
#num{
    display:block;
    margin: 0 auto 10px;
    padding: 15px 20px;
    text-align: center;
    color:whitesmoke;
    font-weight: bolder;
    text-shadow:0 0  5px black;
    background:black;
    /* background-image: url(images/slots1.gif); */
    background-size:contain;
    border:none;
    border-radius: 20%;
}
#num:active{
    background: red;
}

.bandvids{
    display:flex;
    justify-content:center;
}
.vid{
    margin: 10px 10px;
    border: solid 2px red;
}
a{
    color:whitesmoke;
}
.bandpics{
    display:block;
    margin:0 auto;
    width:75vw;
}
#bio{
    margin:20px auto;
    width:75vw;
}

